# OptProject

./: .gitignore  README.md  agent.py  brain.py  generational.py  headless.py  pyproject.toml  reproduction_showcase.py  showcase.py  visualization.py  world.py
analysis/: eda.ipynb
scripts/: run_generational.py  run_headless.py  run_plots.py  run_replay.py  run_showcase.py
src/optproject/: __init__.py
src/optproject/analysis/: __init__.py  logging.py  metrics.py
src/optproject/core/: __init__.py  actions.py  agent.py  brain.py  config.py  schema.py  world_base.py
src/optproject/environments/: __init__.py  classic_world.py  competitive_world.py  generational_world.py  oasis_world.py  twoisland_world.py
src/optproject/runners/: __init__.py  headless_generational.py  headless_runner.py  visualization_runner.py
src/optproject/scenarios/: __init__.py  generational_scenarios.py  showcase_scenarios.py
src/optproject/utils/: __init__.py  nsga2.py
tests/: test_agent.py  test_generational.py  test_world.py
