[project]
name = "optproject"
version = "0.1.0"
description = "A grid-based artificial life simulation exploring Co-Evolution and Game Theory."
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "tqdm==4.66.2",
    "pandas==2.2.2",
    "platypus-opt==1.0.4",
    "scipy==1.13.0",
    "seaborn==0.13.2"
]

[tool.black]
line-length = 88  
target-version = ['py313'] 

[tool.isort]
profile = "black"
line_length = 88  # Must match the number above